--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <title></title>
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
+</style>
+<link rel="icon" type="image/x-icon" href="/chicken.png">
 <link rel="stylesheet" href="/bundle.css" />
 <main></main>
 <script src="/bundle.js"></script>
