--- a/client/index.html
+++ b/client/index.html
@@ -5,5 +5,7 @@
 </style>
 <link rel="icon" type="image/x-icon" href="/chicken.png">
 <link rel="stylesheet" href="/bundle.css" />
-<main></main>
+<main>
+    
+</main>
 <script src="/bundle.js"></script>
